text in english + modifs

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,9 @@
-<div class="m-3">
+<div class="m-3" style="height: 100vh;">
+
   <div class="d-flex">
     <h1 class="flex-grow-1">All your bookings</h1>
     <div>
-      <%= link_to courses_path, :class => "btn p-3 m-3 form-button btn-secondary" do %>
+      <%= link_to courses_path, :class => "btn p-3 m-3 button btn-secondary" do %>
         <i class="fas fa-long-arrow-alt-left"> Back to courses list</i>
       <% end %>
     </div>
@@ -24,5 +25,6 @@
       </div>
     </div>
   </div>
+
 </div>
 
