--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,7 +26,7 @@ footer {
   li {
     list-style-type: none;
     a:hover {
-      color: white;
+      color: black;
       text-decoration: none;
     }
     a {
